# expr

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  PROPOSAL.md  README.md  format.py  justfile  vcpkg-configuration.json  vcpkg.json
cmake/: ExternalAntlr4Cpp.cmake
parser/: Expr.g4
src/: expr.cpp  expr.h  expr.hpp  listener.cpp  listener.h  visitor.cpp
tests/: CMakeLists.txt  test_expr.cpp
